enlarged chat capacity, bottom menu scrollbar bug

--- a/contentCSS.css
+++ b/contentCSS.css
@@ -50,7 +50,7 @@
   z-index: 1;
   padding: 15px;
   width: 24px;
-  height: 29px;
+  height: 30px;
   text-decoration: none;
   font-size: 17pt;
   overflow-x: hidden;
